[package]
name = "reing_text2image"
version = "0.1.0"
authors = ["Yusuke Sangenya <longinus.eva@gmail.com>"]

[lib]
name = "reing_text2image"
path = "src/lib.rs"

[[bin]]
name = "text2image"
path = "src/main.rs"

[dependencies]
image = "0.23.14"
imageproc = "0.22.0"
rusttype = "0.9.2"
clap = "2.34.0"
